Swagger Documentation for Manage User
